--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,5 +1,5 @@
 .App {
-  background-image: url('./images/background.png');
+  background-image: url('./../images/background.png');
   background-size: cover;
   background-color: rgb(48, 48, 48);
   min-height: 100vh;
