--- a/src/resources/css/styles.css
+++ b/src/resources/css/styles.css
@@ -1,4 +1,4 @@
-body {
+body, html {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
         "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -11,4 +11,10 @@ body {
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
         monospace;
+}
+.top-10-pcnt {
+    padding: 10%;
+}
+section {
+    color: white;
 }
